k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d1y-deployment
  namespace: d1y
spec:
  selector:
    matchLabels:
      app: d1y-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: d1y-app
    spec:
      containers: 
      - name: d1y-container
        image: mattanddev/d1y:$IMAGE_VERSION
        ports:
        - containerPort: 3000
