k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: d1y-service
  namespace: d1y
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: d1y-app
