k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: d1y-ingress
  namespace: d1y
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - d1y.xyz
    secretName: letsencrypt-production
  rules:
  - host: d1y.xyz
    http:
      paths:
      - backend:
          serviceName: d1y-service
          servicePort: 80
